--- a/Frontend/src/app/shared/player-avatar/player-avatar.component.html
+++ b/Frontend/src/app/shared/player-avatar/player-avatar.component.html
@@ -1,6 +1,6 @@
 <div
   class="rounded-full h-8 w-8 text-white flex items-center justify-center"
-  [style.backgroundColor]="player.color"
+  [style.backgroundColor]="color"
   [style.color]="textColor"
 >
   {{ firstInitial }}
