--- a/Frontend/src/app/game/lobby/lobby.component.html
+++ b/Frontend/src/app/game/lobby/lobby.component.html
@@ -1,16 +1,44 @@
 <div
-  class="h-full bg-gradient-to-t from-gray-950 to-[#001941] flex flex-col items-center justify-center p-4 gap-8"
+  class="h-full bg-gradient-to-t from-gray-950 to-[#001941] grid grid-cols-[1fr_minmax(0px,42rem)_minmax(0px,16rem)_1fr] grid-rows-[1fr_2.25rem_24rem_3rem_1fr] gap-x-8 gap-y-4"
 >
-  <h1 class="text-white text-3xl font-bold italic">{{ lobby.bounds.name }}</h1>
+  <h1
+    class="col-start-2 row-start-2 text-center text-white text-3xl font-bold italic"
+  >
+    {{ lobby.bounds.name }}
+  </h1>
   <div
     #previewMap
-    class="h-96 w-full max-w-2xl rounded-3xl border-white border-4"
+    class="col-start-2 row-start-3 h-full w-full max-w-2xl rounded-3xl border-white border-4"
   ></div>
-  <div class="flex flex-col items-center gap-2">
-    <app-button (clicked)="startGame()" class="w-52">Start Game</app-button>
-    <p class="text-white font-bold">Or</p>
+  <div class="col-start-2 row-start-4 flex items-center justify-center gap-2">
     <app-link-button routerLink="/" class="w-52">
-      Choose a Different City
+      Start a New Game
     </app-link-button>
+    <app-button (clicked)="startGame()" class="w-52">Start Game</app-button>
   </div>
+  <h1 class="col-start-3 row-start-2 text-white text-3xl font-bold text-center">
+    Players
+  </h1>
+  <div class="col-start-3 row-start-3 bg-gray-800 rounded-3xl overflow-hidden">
+    <div class="h-full overflow-y-auto flex flex-1 flex-col gap-4 py-6 px-4">
+      @for (player of lobby.players; track player.name) {
+        <div class="flex gap-4">
+          <app-player-avatar [name]="player.name" [color]="player.color" />
+          <p class="text-white text-xl">{{ player.name }}</p>
+        </div>
+      }
+    </div>
+  </div>
+  <app-secondary-button
+    class="col-start-3 row-start-4 w-full"
+    (clicked)="copyLink()"
+  >
+    @if (linkCopied) {
+      <img src="check-icon.svg" alt="Link Copied" class="h-5 mr-2" />
+      <span>Link Copied </span>
+    } @else {
+      <img src="copy-icon.svg" alt="Copy Link" class="h-5 mr-2" />
+      <span>Copy Invite Link</span>
+    }
+  </app-secondary-button>
 </div>
