--- a/Frontend/src/app/shared/loading-spinner/loading-spinner.component.html
+++ b/Frontend/src/app/shared/loading-spinner/loading-spinner.component.html
@@ -1,7 +1,7 @@
 <div role="status">
   <svg
     aria-hidden="true"
-    class="w-8 h-8 animate-spin fill-white"
+    class="w-full h-full animate-spin fill-white"
     viewBox="0 0 100 101"
     fill="none"
     xmlns="http://www.w3.org/2000/svg"
