Added submit guess feature

--- a/Frontend/src/app/game/create-game/create-game.component.html
+++ b/Frontend/src/app/game/create-game/create-game.component.html
@@ -1,6 +1,4 @@
-<div
-  class="h-full bg-gradient-to-t from-gray-950 to-[#001941] flex flex-col items-center justify-center bg-black gap-4 p-8"
->
+<div class="h-full flex flex-col items-center justify-center gap-4 p-8">
   @if (creatingGame) {
     <app-loading-spinner class="h-16 w-16" />
     <p class="text-white font-bold text-xl italic mt-6">Creating Game...</p>
