--- a/Frontend/src/app/game/final-results/final-results.component.html
+++ b/Frontend/src/app/game/final-results/final-results.component.html
@@ -1,6 +1,4 @@
-<div
-  class="h-full bg-gradient-to-t from-gray-950 to-[#001941] flex flex-col items-center justify-center p-4 gap-8"
->
+<div class="h-full flex flex-col items-center justify-center p-4 gap-8">
   <h1 class="text-white text-3xl italic font-bold">Final Results</h1>
   <div class="bg-gray-800 rounded-3xl w-96">
     <div class="flex items-center justify-between px-4 py-4">
