--- a/Frontend/src/app/game/join-game/join-game.component.html
+++ b/Frontend/src/app/game/join-game/join-game.component.html
@@ -1,5 +1,5 @@
 <div
-  class="h-full bg-gradient-to-t from-gray-950 to-[#001941] flex flex-col items-center justify-center gap-8"
+  class="h-full bg-gradient-to-t flex flex-col items-center justify-center gap-8"
 >
   <h1 class="text-white text-3xl font-bold italic">Enter your Name</h1>
   <input
