--- a/Frontend/src/app/game/round-results/round-results.component.html
+++ b/Frontend/src/app/game/round-results/round-results.component.html
@@ -1,5 +1,5 @@
 <div
-  class="h-full bg-gradient-to-t from-gray-950 to-[#001941] grid grid-cols-[1fr_minmax(0px,42rem)_minmax(0px,24rem)_1fr] grid-rows-[1fr_2.25rem_24rem_min-content_3rem_1fr] gap-x-8 gap-y-4"
+  class="h-full grid grid-cols-[1fr_minmax(0px,42rem)_minmax(0px,24rem)_1fr] grid-rows-[1fr_2.25rem_24rem_min-content_3rem_1fr] gap-x-8 gap-y-4"
 >
   <h1
     class="col-start-2 row-start-2 text-white text-3xl italic font-bold text-center"
