--- a/Frontend/src/app/game/lobby/lobby.component.html
+++ b/Frontend/src/app/game/lobby/lobby.component.html
@@ -1,6 +1,7 @@
 <div
   class="h-full grid grid-cols-[1fr_minmax(0px,42rem)_minmax(0px,16rem)_1fr] grid-rows-[1fr_2.25rem_24rem_3rem_1fr] gap-x-8 gap-y-4"
 >
+  <app-logo class="fixed top-8 left-8" />
   <h1
     class="col-start-2 row-start-2 text-center text-white text-3xl font-bold italic"
   >
