--- a/Frontend/src/app/home/home.component.html
+++ b/Frontend/src/app/home/home.component.html
@@ -2,6 +2,7 @@
   class="h-full w-full bg-cover bg-bottom flex flex-col items-center justify-center bg-black p-8"
   style="background-image: url(&quot;/city.png&quot;)"
 >
+  <app-logo class="fixed top-8 left-8" />
   <h1
     class="text-6xl text-white font-mono min-h-16 text-center [text-shadow:_3px_3px_0_rgb(0_0_0_/_40%)] mb-32"
   >
