--- a/Frontend/src/app/game/create-game/create-game.component.html
+++ b/Frontend/src/app/game/create-game/create-game.component.html
@@ -1,4 +1,6 @@
 <div class="h-full flex flex-col items-center justify-center gap-4 p-8">
+  <app-logo class="fixed top-8 left-8" />
+
   @if (creatingGame) {
     <app-loading-spinner class="h-16 w-16" />
     <p class="text-white font-bold text-xl italic mt-6">Creating Game...</p>
