--- a/Frontend/src/app/game/final-results/final-results.component.html
+++ b/Frontend/src/app/game/final-results/final-results.component.html
@@ -1,4 +1,5 @@
 <div class="h-full flex flex-col items-center justify-center p-4 gap-8">
+  <app-logo class="fixed top-8 left-8" />
   <h1 class="text-white text-3xl italic font-bold">Final Results</h1>
   <div class="bg-gray-800 rounded-3xl w-96">
     <div class="flex items-center justify-between px-4 py-4">
@@ -26,9 +27,11 @@
     </div>
   </div>
   <div class="flex flex-col items-center gap-2">
-    <app-button (clicked)="playAgain()" class="w-52">Play Again</app-button>
+    <app-button (clicked)="playAgain()" class="w-52" [loading]="startingNewGame"
+      >Play Again</app-button
+    >
     <p class="text-white font-bold">Or</p>
-    <app-link-button routerLink="/" class="w-52">
+    <app-link-button routerLink="/create-game" class="w-52">
       Choose a Different City
     </app-link-button>
   </div>
