--- a/Frontend/src/app/game/guessing/finalized-guess/finalized-guess.component.html
+++ b/Frontend/src/app/game/guessing/finalized-guess/finalized-guess.component.html
@@ -1,4 +1,5 @@
 <div class="h-full flex flex-col items-center justify-center gap-8">
+  <app-logo class="fixed top-8 left-8" />
   <h1
     class="col-start-2 row-start-2 text-white text-3xl italic font-bold text-center"
   >
