--- a/Frontend/src/app/game/join-game/join-game.component.html
+++ b/Frontend/src/app/game/join-game/join-game.component.html
@@ -1,6 +1,7 @@
 <div
   class="h-full bg-gradient-to-t flex flex-col items-center justify-center gap-8"
 >
+  <app-logo class="fixed top-8 left-8" />
   <h1 class="text-white text-3xl font-bold italic">Enter your Name</h1>
   <input
     [formControl]="formControl"
