--- a/Frontend/src/app/game/round-results/round-results.component.html
+++ b/Frontend/src/app/game/round-results/round-results.component.html
@@ -34,12 +34,18 @@
     </div>
   }
   <div class="col-start-2 row-start-5 flex justify-center">
-    @if (roundResults.isFinalRound) {
-      <app-button (clicked)="showFinalResults()">
-        Show Final Results
-      </app-button>
+    @if (isHost) {
+      @if (roundResults.isFinalRound) {
+        <app-button (clicked)="showFinalResults()" [loading]="loading">
+          Show Final Results
+        </app-button>
+      } @else {
+        <app-button (clicked)="startNextRound()" [loading]="loading"
+          >Start Next Round</app-button
+        >
+      }
     } @else {
-      <app-button (clicked)="startNextRound()">Start Next Round</app-button>
+      <p class="text-white">Waiting for host to start the next round.</p>
     }
   </div>
 
@@ -49,33 +55,39 @@
     >
       Players
     </h1>
-    <div class="h-full col-start-3 row-start-3 bg-gray-800 rounded-3xl">
-      <div class="flex items-center justify-between px-4 py-4">
-        <p class="text-gray-500">Place</p>
-        <p class="text-nowrap col-span-2">
-          <span class="text-gray-500">Total Score</span>
-          <span class="text-yellow-600"> + Round</span>
-        </p>
-      </div>
-      <div class="h-full overflow-y-auto flex flex-col gap-4 px-4">
-        @for (
-          player of roundResults.players;
-          track player.playerName;
-          let i = $index
-        ) {
-          <div class="flex items-center gap-4">
-            <p class="text-gray-400 w-3">{{ i + 1 }}.</p>
-            <app-player-avatar
-              [name]="player.playerName"
-              [color]="player.playerColor"
-            />
-            <p class="flex-1 text-white">{{ player.playerName }}</p>
-            <p class="text-white">{{ player.totalScore | number }}</p>
-            <p class="text-yellow-500 w-10 text-right">
-              +{{ player.roundScore | number }}
-            </p>
-          </div>
-        }
+    <div
+      class="col-start-3 row-start-3 rounded-3xl overflow-hidden bg-gray-800"
+    >
+      <div class="h-full flex flex-col">
+        <div class="flex justify-between px-4 py-4">
+          <p class="text-gray-500">Place</p>
+          <p class="text-nowrap col-span-2">
+            <span class="text-yellow-600">Round Score </span>
+            <span class="text-gray-500">Total Score</span>
+          </p>
+        </div>
+        <div class="flex-1 h-full overflow-y-auto flex flex-col gap-4 px-4">
+          @for (
+            player of roundResults.players;
+            track player.playerName;
+            let i = $index
+          ) {
+            <div class="flex items-center gap-4">
+              <p class="text-gray-400 w-3">{{ i + 1 }}.</p>
+              <app-player-avatar
+                [name]="player.playerName"
+                [color]="player.playerColor"
+              />
+              <p class="flex-1 text-white">{{ player.playerName }}</p>
+              <p class="text-yellow-500 text-right">
+                +{{ player.roundScore | number }}
+              </p>
+              <p class="text-white w-10 text-right">
+                {{ player.totalScore | number }}
+              </p>
+            </div>
+          }
+        </div>
       </div>
     </div>
   }
