Added return to start button

--- a/Frontend/src/app/game/guessing/finalized-guess/finalized-guess.component.html
+++ b/Frontend/src/app/game/guessing/finalized-guess/finalized-guess.component.html
@@ -9,4 +9,7 @@
     #map
     class="col-start-2 row-start-3 h-full w-full max-w-[42rem] max-h-96 rounded-3xl border-white border-4"
   ></div>
+  <app-secondary-button (clicked)="guessAgain.emit()"
+    >Submit a Different Guess</app-secondary-button
+  >
 </div>
